--- a/airs/content/pages/products/rules/list/networks/255/index.adoc
+++ b/airs/content/pages/products/rules/list/networks/255/index.adoc
@@ -21,27 +21,33 @@ must allow access only to the necessary ports.
 Ensure that only network ports, protocols, and services listening on a system
 with validated business needs are running on each system.
 
-. [[r2]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(e)(1):]
+. [[r2]] link:https://www.cisecurity.org/controls/[CIS Controls. 12.4 Deny Communication Over Unauthorized Ports].
+Deny communication over unauthorized *TCP* or *UDP* ports or application
+traffic to ensure that only authorized protocols are allowed to cross the
+network boundary in or out of the network at each of the organization’s network
+boundaries.
+
+. [[r3]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(e)(1):]
 Transmission Security: Implement technical security measures
 to guard against unauthorized access
 to electronic protected health information
 that is being transmitted over an electronic communications network.
 
-. [[r3]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R1.1]
+. [[r4]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R1.1]
 Where technically feasible, enable only logical network accessible ports that
 have been determined to be needed by the Responsible Entity,
 including port ranges or services where needed to handle dynamic ports.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.1]
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.1]
 Implement a *DMZ* to limit inbound traffic to only system components that
 provide authorized publicly accessible services, protocols, and ports.
 
-. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.2]
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.2]
 Limit inbound Internet traffic to *IP* addresses within the *DMZ*.
 
-. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.5]
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.5]
 Permit only "established" connections into the network.
 
-. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.2]
+. [[r8]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.2]
 Enable only necessary services, protocols, daemons, etc.,
 as required for the function of the system.
