--- a/airs/content/pages/about-us/partners/evolution/index.adoc
+++ b/airs/content/pages/about-us/partners/evolution/index.adoc
@@ -7,8 +7,8 @@
 
 = EvolutionIT
 
-Evolution is a firm that promotes, implements, and strengthens the effective
+Evolution is a firm that promotes, implements and strengthens the effective
 management of `IT`. It helps companies to improve their competitiveness and
 profitability through better quality services. It employs world-class practices
 and, based on mutual trust, successfully builds business relationships with
-clients, partners, and collaborators.
+clients, partners and collaborators.
