--- a/airs/content/pages/about-us/partners/arroyo-consulting/index.adoc
+++ b/airs/content/pages/about-us/partners/arroyo-consulting/index.adoc
@@ -10,7 +10,7 @@
 
 {usa} Arroyo Consulting is an agile `IT` development firm formed in `2009`.
 They have offices in the United States
-and low-cost operation centers located in Mexico City, Mexico,
-and Medellín and Bogotá, Colombia.
+and low-cost operation centers located in Mexico City,
+as well as in Medellín and Bogotá, Colombia.
 They have successfully delivered over `1000` projects internationally,
 with partners in a variety of industries and sectors.
