--- a/airs/content/pages/about-us/partners/ediligence/index.adoc
+++ b/airs/content/pages/about-us/partners/ediligence/index.adoc
@@ -7,8 +7,8 @@
 
 = Ediligence
 
-Ediligence is a firm that provides data security, forensic, and technology
+Ediligence is a firm that provides data security, forensic and technology
 consulting services. By aligning legal and technical ideas, they assist in
-litigation, administrative investigations, and consulting in compliance areas.
-The latter may cover competence, personal data protection, and intellectual
-assets.
+litigation, administrative investigations and consulting in compliance areas.
+The latter covers competence,
+personal data protection and intellectual assets.
