skims\feat(back): #3544.5 add public buckets
- add test


Former-commit-id: de794cd78db4b9aa984844a368da2d304dd0b209

--- a/skims/static/translations/findings/F055_AWS.yaml
+++ b/skims/static/translations/findings/F055_AWS.yaml
@@ -1,3 +1,9 @@
+utils.model.finding.enum.F055_AWS.public_buckets:
+  en: S3 buckets are publicly accessible for read or write operations.
+  es: >
+    Los buckets S3 son accesibles públicamente para operaciones de lectura o
+    escritura.
+
 utils.model.finding.enum.F055_AWS.unencrypted_volumes:
   en: EC2 volumes are not encrypted or do not use customer-managed keys.
   es: >
