--- a/airs/content/pages/products/rules/list/architecture/050/index.adoc
+++ b/airs/content/pages/products/rules/list/architecture/050/index.adoc
@@ -8,7 +8,7 @@
 
 == Requirement
 
-Interpreted code (e.g. *Javascript*, *CSS*) must be loaded from domains
+Interpreted code (e.g., *Javascript*, *CSS*) must be loaded from domains
 controlled by the organization.
 
 == Description
