--- a/airs/content/pages/products/rules/list/credentials/141/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/141/index.adoc
@@ -10,7 +10,7 @@
 
 The system must force users to re-authenticate or invalidate their session
 if the state of their account changes
-(e.g. password change/recovery, lockouts, user deletion, etc.).
+(e.g., password change/recovery, lockouts, user deletion, etc.).
 
 == Findings
 
