--- a/airs/content/pages/products/rules/list/credentials/142/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/142/index.adoc
@@ -66,8 +66,8 @@ An adversary may try certain common or default usernames and passwords to gain
 access into the system and perform unauthorized actions.
 
 . [[r2]] link:http://capec.mitre.org/data/definitions/560.html[CAPEC-560: Use of Known Domain Credentials].
-An adversary guesses or obtains (i.e. steals or purchases) legitimate
-credentials (e.g. userID/password) to achieve authentication and to perform
+An adversary guesses or obtains (i.e., steals or purchases) legitimate
+credentials (e.g., userID/password) to achieve authentication and to perform
 authorized actions under the guise of an authenticated user or service.
 
 . [[r3]] link:https://www.cisecurity.org/controls/[CIS Controls. 4.2 Change Default Passwords].
@@ -87,7 +87,7 @@ temporarily or permanently.
 . [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.5 Credential Recovery Requirements.(2.5.4)]
 Verify shared or default accounts are not present
-(e.g. "root", "admin", or "sa").
+(e.g., "root", "admin", or "sa").
 
 . [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.10 Service Authentication Requirements.(2.10.2)]
