--- a/airs/content/pages/products/rules/list/session/029/index.adoc
+++ b/airs/content/pages/products/rules/list/session/029/index.adoc
@@ -9,8 +9,8 @@
 == Requirement
 
 The session *cookies* of web applications
-must have security attributes (*HttpOnly*, *Secure*, *SameSite*) and prefixes
-(e.g. **__Host-**).
+must have security attributes (*HttpOnly*, *Secure*, *SameSite*)
+and prefixes (e.g., **__Host-**).
 
 == Description
 
