--- a/airs/content/pages/products/rules/findings/hygiene/060/index.adoc
+++ b/airs/content/pages/products/rules/findings/hygiene/060/index.adoc
@@ -17,7 +17,7 @@ as some special flows go unnoticed.
 Using a "*catch*" statement to catch a high-level class such as "*Exception*"
 can hide exceptions that deserve special treatment,
 or that should not be handled at that point in the program.
-It negates the purpose of typified exceptions (e.g. "*ValueError*",
+It negates the purpose of typified exceptions (e.g., "*ValueError*",
 "*ConnectionError*" and "*NullPointerException*"),
 and it can be particularly dangerous if the program grows and starts throwing
 new types of exceptions,
