--- a/airs/content/pages/products/rules/findings/security/056/index.adoc
+++ b/airs/content/pages/products/rules/findings/security/056/index.adoc
@@ -1,5 +1,5 @@
 :slug: products/rules/findings/056/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities arising from allowing anonymous connections to the services, recommendations to avoid them and related security requirements.
+:description: Here, the finding presents information about vulnerabilities arising from allowing anonymous connections to the services and recommendations to avoid them.
 :keywords: Anonymous, Connection, FTP, Access Control, Configuration, SMTP
 :findings: yes
 :type: security
@@ -9,8 +9,8 @@
 == Description
 
 Due to an improper configuration of the server
-(e.g. an FTP service with username: *anonymous* and password: guest* or an
-SMTP open relay),
+(e.g., an FTP service with username: *anonymous* and password:
+guest* or an SMTP open relay),
 it is possible to make anonymous connections to it and access otherwise
 protected resources.
 
