--- a/airs/content/pages/products/rules/list/architecture/355/index.adoc
+++ b/airs/content/pages/products/rules/list/architecture/355/index.adoc
@@ -54,7 +54,7 @@ and the **Content-Disposition** header should have a fixed filename.
 V12.5 File Download Requirements.(12.5.1)]
 Verify that the web tier is configured to serve only files with specific file
 extensions to prevent unintentional information and source code leakage.
-For example, backup files (e.g. *.bak*), temporary working files (e.g. *.swp*),
+For example, backup files (e.g., *.bak*), temporary working files (e.g., *.swp*),
 compressed files (*.zip*, *.tar.gz*, etc.) and other extensions commonly used
 by editors should be blocked unless required.
 
