--- a/airs/content/pages/products/rules/list/authentication/235/index.adoc
+++ b/airs/content/pages/products/rules/list/authentication/235/index.adoc
@@ -4,7 +4,7 @@
 :keywords: Authentication, Interface, Credentials, Security, Users, Requirement, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
-= R235. Define credentials interface
+= R235. Define credential interface
 
 == Requirement
 
