--- a/airs/content/pages/products/rules/list/authentication/328/index.adoc
+++ b/airs/content/pages/products/rules/list/authentication/328/index.adoc
@@ -43,8 +43,8 @@ and attempt to make it look like the message comes from them without changing
 its content.
 
 . [[r3]] link:http://capec.mitre.org/data/definitions/560.html[CAPEC-560: Use of Known Domain Credentials].
-An adversary guesses or obtains (i.e. steals or purchases) legitimate
-credentials (e.g. userID/password) to achieve authentication and to perform
+An adversary guesses or obtains (i.e., steals or purchases) legitimate
+credentials (e.g., userID/password) to achieve authentication and to perform
 authorized actions under the guise of an authenticated user or service.
 
 . [[r4]] link:https://www.cisecurity.org/controls/[CIS Controls. 4.5 Use Use Multi-Factor Authentication for All Administrative Access].
