--- a/airs/content/pages/products/rules/list/credentials/133/index.adoc
+++ b/airs/content/pages/products/rules/list/credentials/133/index.adoc
@@ -28,7 +28,7 @@ and the maximum length of the password.
 
 . [[r2]] link:http://capec.mitre.org/data/definitions/560.html[CAPEC-560: Use of Known Domain Credentials].
 An adversary guesses or obtains (i.e. steals or purchases) legitimate
-credentials (e.g. userID/password) to achieve authentication and to perform
+credentials (e.g., userID/password) to achieve authentication and to perform
 authorized actions under the guise of an authenticated user or service.
 
 . [[r3]] link:https://cwe.mitre.org/data/definitions/521.html[CWE-521: Weak Password Requirements]
