--- a/airs/content/pages/products/rules/list/files/046/index.adoc
+++ b/airs/content/pages/products/rules/list/files/046/index.adoc
@@ -31,7 +31,7 @@ files.
 When the executable loads the resource
 (such as an image file or configuration file)
 the attacker has modified the file to either execute malicious code directly or
-manipulate the target process (e.g. application server) to execute based on the
+manipulate the target process (e.g., application server) to execute based on the
 malicious configuration parameters.
 
 . [[r4]] link:http://capec.mitre.org/data/definitions/38.html[CAPEC-38: Leveraging/Manipulating Configuration File Search Paths].
