--- a/airs/content/pages/products/rules/list/source/160/index.adoc
+++ b/airs/content/pages/products/rules/list/source/160/index.adoc
@@ -138,7 +138,7 @@ required.
 For example, use encoders specifically for *HTML* values, *HTML* attributes,
 JavaScript, URL Parameters, *HTTP* headers, *SMTP*, and others as the context
 requires, especially from untrusted inputs
-(e.g. names with Unicode or apostrophes, such as ねこ or O'Hara).
+(e.g., names with Unicode or apostrophes, such as ねこ or O'Hara).
 
 . [[r21]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.3 Output encoding and Injection Prevention Requirements.(5.3.2)]
